Fix control bar spacing in standalone

--- a/styles/common.less
+++ b/styles/common.less
@@ -28,9 +28,7 @@ canvas {
 }
 
 .control-bar {
-  padding-top: 5px;
   display: flex;
-  margin: 0 -10px;
 
   justify-content: center;
 
