--- a/styles/main.less
+++ b/styles/main.less
@@ -44,6 +44,11 @@ p {
   line-height: 20px;
 }
 
+.control-bar {
+  padding-top: 5px;
+  margin: 0 -10px;
+}
+
 // multi-column mode
 @media only screen and (min-width: 750px) {
   .instructions {
