--- a/styles/standalone.less
+++ b/styles/standalone.less
@@ -15,6 +15,7 @@ html, body {
   bottom: 0px;
   width: 100%;
   z-index: 1;
+  padding: 5px;
 
   img {
     opacity: 0.7;
